--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
       <div class="row">
 
         
-        <!-- left side - slideshow -->
-        <div class="col-sm">
+        <!-- slideshow -->
+        <div class="col-sm slide-max-width">
           <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="15000">
             <ol class="carousel-indicators">
               <li data-target="#slideshow-valky" data-slide-to="0" class="active"></li>
