--- a/index.html
+++ b/index.html
@@ -33,10 +33,6 @@
           </div>
         </div>
         <div class="global-font-color">NINJA</div>
-        <!--<div class="global-font-color login-area">
-          <a class="login-area-link" href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=8fz5icnov4zylwrt45ybv0b7dpavkp&redirect_uri=http://localhost:8000/index.html">Login with Twitch</a>
-          <a class="login-area-link" href="https://id.twitch.tv/oauth2/authorize?response_type=token&client_id=szg9bkjyvnowb5njuznvrfeqqqyvfv&redirect_uri=https://itsvalky.github.io/">Login with Twitch</a>
-        </div>-->
       </div>
     </nav>
     <div class="container pull-up">
@@ -100,7 +96,7 @@
     </div>
 
     <!-- footer content -->
-    <foot>
+    <footer>
       <div class="container">
         <br><hr><br>
         <div class="row">
@@ -125,7 +121,7 @@
 
         </div>
       </div><br>
-    </foot>
+    </footer>
 
 
     <!-- Optional JavaScript -->
