--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
     <div class="container">
       
 
-      <!-- logo -->
-      <!--<div class="row pull-down">
-        <div class="col-sm">
+      <!-- Welcome -->
+      <div class="row pull-down">
+        <div class="col-auto-2">
           <div class="main-text text-center">
+            <h1>Welcome to my Ninja Guide :></h1>
             <img src="/img/ninja_class.png" class="main-logo"><br>
             Ninja Guide
           </div>
         </div>
-      </div>-->
+      </div>
 
 
       <!-- slideshow -->
