--- a/index.html
+++ b/index.html
@@ -51,13 +51,21 @@
 
       <!-- Welcome -->
       <div class="row pull-down">
-        <div class="col-auto-2">
-          <div class="main-text text-center">
-            <h1>Welcome to my Ninja Guide :></h1>
-            <img src="/img/ninja_class.png" class="main-logo"><br>
-            Ninja Guide
+          <div class="col-auto">
+            <div class="main-text text-center">
+              <img src="/img/ninja_class.png" class="main-logo">
+            </div>
           </div>
-        </div>
+          <div class="col-auto">
+            <div class="main-text text-center">
+              <h1>Welcome to my Ninja Guide :></h1>
+            </div>
+          </div>
+          <div class="col-auto">
+            <div class="main-text text-center">
+              <img src="/img/ninja_class.png" class="main-logo">
+            </div>
+          </div>
       </div>
 
 
