--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Basic Settings -->
-    <link rel="icon" href="/img/favicon.png">
+    <link rel="icon" href="/img/ninja_class.png">
     <title>TERA Ninja Guide</title>
 
   </head>
@@ -32,7 +32,7 @@
             </div>
           </div>
         </div>
-        <div class="global-font-color">NINJA</div>
+        <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo"></a>
       </div>
     </nav>
     <div class="container pull-up">
@@ -51,17 +51,17 @@
 
       <!-- Welcome -->
       <div class="row pull-down">
-          <div class="col-auto">
+          <div class="col-sm">
             <div class="main-text text-center">
               <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
-          <div class="col-auto">
+          <div class="col-sm">
             <div class="main-text text-center">
               <h1>Welcome to my Ninja Guide :></h1>
             </div>
           </div>
-          <div class="col-auto">
+          <div class="col-sm">
             <div class="main-text text-center">
               <img src="/img/ninja_class.png" class="main-logo">
             </div>
@@ -140,8 +140,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   
     <!-- Custom JavaScript -->
-    <script src="/scripts/cookie.js"></script>
-    <script src="/scripts/twitchcall.js"></script>
+    <!--<script src="/scripts/cookie.js"></script>-->
   
   </body>
 </html>
