--- a/index.html
+++ b/index.html
@@ -21,20 +21,26 @@
     <!-- navbar content -->
     <nav class="navbar">
       <div class="container">
-        <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo"></a>
-        <div class="nav-tex">
+        <div class="nav-text">
+
           <div class="row">
-            <div class="col-sm">
-              <a href="/_temp.html" class="global-font-color">Site 1</a>
+
+            <div class="col-auto">
+              <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo image-center"></a>
             </div>
-            <div class="col-sm">
-              <a href="/_temp.html" class="global-font-color">Site 2</a>
+
+            <div class="col-auto text-center">
+              <a href="/_temp.html" class="global-font-color">Gear</a><br>
+              <a href="/_temp.html" class="global-font-color">Accessoires</a><br>
+              <a href="/_temp.html" class="global-font-color">Glyphs & Talents</a>
             </div>
+
           </div>
+
         </div>
-        <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo"></a>
       </div>
     </nav>
+
     <div class="container pull-up">
       <hr>
       <div>
