--- a/temp.html
+++ b/temp.html
@@ -30,9 +30,9 @@
             </div>
 
             <div class="col-auto text-center">
-              <a href="/_temp.html" class="global-font-color">Gear</a><br>
-              <a href="/_temp.html" class="global-font-color">Accessoires</a><br>
-              <a href="/_temp.html" class="global-font-color">Glyphs & Talents</a>
+              <a href="/temp.html" class="global-font-color">Gear</a><br>
+              <a href="/temp.html" class="global-font-color">Accessoires</a><br>
+              <a href="/temp.html" class="global-font-color">Glyphs & Talents</a>
             </div>
 
           </div>
