--- a/index.html
+++ b/index.html
@@ -73,6 +73,23 @@
             </div>
           </div>
       </div>
+      
+
+      <!-- Intro -->
+      <div class="row pull-down">
+          <div class="col-sm">
+            <div class="main-text text-center">
+              <p>
+                <i>It was not the 15th century that spies were specially trained for their purpose.
+                It was around this time that the word shinobi appeared to define and clearly identify <b>Ninja</b> as a secretive group.
+                <b>Ninjas</b> were professional infiltrators and assassins who were valued for their stealthiness and fighting ability.
+                The most important role of a <b>Ninja</b> is to collect intelligence.
+                They were required to have good memories and mechanical skills first, rather than physical strength... 
+                <b>Ninja insisted on having an existence like a shadow.</b></i>
+              </p>
+            </div>
+          </div>
+      </div>
 
 
       <!-- slideshow -->
