--- a/index.html
+++ b/index.html
@@ -80,12 +80,19 @@
           <div class="col-sm">
             <div class="main-text text-center">
               <p>
-                <i>It was not the 15th century that spies were specially trained for their purpose.
+                It was not the 15th century that spies were specially trained for their purpose.
                 It was around this time that the word shinobi appeared to define and clearly identify <b>Ninja</b> as a secretive group.
                 <b>Ninjas</b> were professional infiltrators and assassins who were valued for their stealthiness and fighting ability.
                 The most important role of a <b>Ninja</b> is to collect intelligence.
                 They were required to have good memories and mechanical skills first, rather than physical strength... 
-                <b>Ninja insisted on having an existence like a shadow.</b></i>
+                <b>Ninja insisted on having an existence like a shadow... Ö_Ö</b>
+              </p>
+            </div>
+            <div class="main-text text-center">
+              <p>
+                In TERA, the Ninja is a nimble strategist who relies on hit-and-run tactics and misdirection to attack quickly and get away cleanly. 
+                She deals deadly damage with her impressive shuriken, up close or at range with her awakening boomerang while she also fills her Chi. 
+                Ninjas can then harness their Chi to throw fireballs with Burning Heart or to execute a fiery dive attack with Fire Avalanche.
               </p>
             </div>
           </div>
