--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <div class="col-sm">
             <div class="main-text text-center">
               <p>
-                Ninja Discord:
+                TERA Ninja Discord:
               </p>
             </div>
             <div class="main-text text-center">
