--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             
             <div class="main-text text-center">
               <p>
-                On top you will find the links to my PvE rolls for gear, accessoires, glyphs and talent points. I hope I can help some people with it :3
+                On top you will find the sites to my PvE rolls for gear, accessoires, glyphs and talent points. I hope I can help some people with it :3
               </p>
             </div>
 
