--- a/temp.html
+++ b/temp.html
@@ -30,7 +30,7 @@
             </div>
 
             <div class="col-auto text-center">
-              <a href="/temp.html" class="global-font-color">Gear</a><br>
+              <a href="/gear.html" class="global-font-color">Gear</a><br>
               <a href="/temp.html" class="global-font-color">Accessoires</a><br>
               <a href="/temp.html" class="global-font-color">Glyphs & Talents</a>
             </div>
