--- a/temp.html
+++ b/temp.html
@@ -4,6 +4,13 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="TERA Ninja Guide - Need help for Tera's Ninja Class? Have a look here :>">
+    <meta property="og:description" content="TERA Ninja Guide - Need help for Tera's Ninja Class? Have a look here :>">
+    <meta property="og:url" content="https://teraninja.github.io">
+    <meta property="og:title" content="TERA Ninja Guide">
+    <meta property="og:type" content="object">
+    <meta property="og:site_name" content="TERA Ninja Guide">
+    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/47824376?s=400&amp;v=4">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
