--- a/gear.html
+++ b/gear.html
@@ -51,7 +51,7 @@
     <div class="container pull-up">
       <hr>
       <div>
-        <img src="/img/head.png" class="head-picture">
+        <img src="/img/head/head2.png" class="head-picture">
       </div>
       <hr>
     </div>
