--- a/temp.html
+++ b/temp.html
@@ -51,7 +51,7 @@
     <div class="container pull-up">
       <hr>
       <div>
-        <img src="/img/head.png" class="head-picture">
+        <img src="/img/head/head3.png" class="head-picture">
       </div>
       <hr>
     </div>
