--- a/index.html
+++ b/index.html
@@ -205,28 +205,14 @@
 
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper, then Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   
     <!-- Custom JavaScript -->
-    <!-- Pause slideshow with mouse hover -->
-    <script>
-    $(function(){
-
-        $('#slideshow-valky.slide').carousel({
-            pause: "hover"
-        });
-
-        $('input').focus(function(){
-          $("#slideshow-valky").carousel('pause');
-        }).blur(function() {
-          $("#slideshow-valky").carousel('cycle');
-        });
-
-    });
-    </script>
+    <!-- pause slideshow on mouse hover -->
+    <script src="/scripts/slideshow.js"></script>
   
   </body>
 </html>
