--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="col-auto text-center">
               <a href="/gear.html" class="global-font-color">Gear</a><br>
-              <a href="/temp.html" class="global-font-color">Accessoires</a><br>
+              <a href="/accessoire.html" class="global-font-color">Accessoire</a><br>
               <a href="/temp.html" class="global-font-color">Glyphs & Talents</a>
             </div>
 
