--- a/temp.html
+++ b/temp.html
@@ -39,7 +39,7 @@
             <div class="col-auto text-center">
               <a href="/gear.html" class="global-font-color">Gear</a><br>
               <a href="/accessoire.html" class="global-font-color">Accessoire</a><br>
-              <a href="/temp.html" class="global-font-color">Glyphs & Talents</a>
+              <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
             </div>
 
           </div>
@@ -145,7 +145,7 @@
 
           <div class="col-auto">
             <div class="global-font-color">
-              <a href="/tos.html">Terms of Service</a>
+              <a href="/temp.html">Terms of Service</a>
             </div>
           </div>
 
