--- a/index.html
+++ b/index.html
@@ -48,11 +48,37 @@
       </div>
     </nav>
 
+
+    <!-- head pictures -->
     <div class="container pull-up">
       <hr>
-      <div>
-        <img src="/img/head/head.png" class="head-picture">
+      
+      <div class="row pull-down">  
+        <div class="col-sm center-max95 pull-up">
+          <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="20000">
+
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img class="d-block w-100 head-picture" src="/img/head/head.png" alt="Head">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 head-picture" src="/img/head/head2.png" alt="Head">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 head-picture" src="/img/head/head3.png" alt="Head">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 head-picture" src="/img/head/head4.png" alt="Head">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100 head-picture" src="/img/head/head5.png" alt="Head">
+              </div>
+            </div>
+
+          </div>
+        </div>
       </div>
+
       <hr>
     </div>
     
