--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -190,22 +190,46 @@
 
     </div>
 
-    <!-- ++++++++++++++++++ -->
-    <!--   END OF TALENTS   -->
-    <!-- ++++++++++++++++++ -->
 
+
+    <!-- horizontal line -->
+    <div class="container pull-up">
+      <hr>
+    </div>
     
 
 
+    <!-- +++++++++++++++++++ -->
+    <!--   START OF GLYPHS   -->
+    <!-- +++++++++++++++++++ -->
 
+    <!-- main content glyphs -->
     <div class="container">
-      <!-- horizontal line -->
-      <div class="container pull-down">
-        <hr>
+      
+
+      <!-- title glyphs -->
+      <div class="row pull-down">
+          <div class="col-sm">
+            <div class="main-text text-center">
+              <img src="/img/ninja_class.png" class="main-logo">
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="main-text text-center">
+              <b><h3>MISCELLANEOUS</h3><hr>GLYPHS</b>
+            </div>
+          </div>
+          <div class="col-sm">
+            <div class="main-text text-center">
+              <img src="/img/ninja_class.png" class="main-logo">
+            </div>
+          </div>
       </div>
 
 
     </div>
+
+
 
     <!-- footer content -->
     <footer>
