--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <b>Ninja insisted on having an existence like a shadow... Ö_Ö</b>
               </p>
             </div>
-
+            <br>
             <div class="main-text text-center">
               <p>
                 In TERA, the Ninja is a nimble strategist who relies on hit-and-run tactics and misdirection to attack quickly and get away cleanly. 
@@ -130,10 +130,12 @@
                 Ninjas can then harness their Chi to throw fireballs with Burning Heart or to execute a fiery dive attack with Fire Avalanche.
               </p>
             </div>
-            
+            <br>
             <div class="main-text text-center">
               <p>
-                On top you will find the sites to my PvE rolls for gear, accessoires, glyphs and talent points. I hope I can help some people with it :3
+                On this site you will find my PvE rolls for 
+                <a href="/gear.html">gear</a>, <a href="/accessoire.html">accessoires</a>, <a href="/miscellaneous.html">glyphs</a> or even <a href="/miscellaneous.html">talent points</a>. 
+                Maybe I can help some people with it :3
               </p>
             </div>
 
@@ -142,9 +144,9 @@
 
 
       <!-- horizontal line -->
-      <div class="container pull-down">
+      <!--<div class="container pull-down">
         <hr>
-      </div>
+      </div>-->
 
 
       <!-- slideshow -->
