--- a/accessories.html
+++ b/accessories.html
@@ -38,7 +38,7 @@
 
             <div class="col-auto text-center">
               <a href="/gear.html" class="global-font-color">Gear</a><br>
-              <a href="/accessoire.html" class="global-font-color">Accessoire</a><br>
+              <a href="/accessories.html" class="global-font-color">Accessories</a><br>
               <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
             </div>
 
@@ -97,7 +97,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>RINGS</b>
+              <b><h3>ACCESSORIES</h3><hr>RINGS</b>
             </div>
           </div>
           <div class="col-sm">
@@ -205,7 +205,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>EARRINGS</b>
+              <b><h3>ACCESSORIES</h3><hr>EARRINGS</b>
             </div>
           </div>
           <div class="col-sm">
@@ -311,7 +311,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>NECKLACE</b>
+              <b><h3>ACCESSORIES</h3><hr>NECKLACE</b>
             </div>
           </div>
           <div class="col-sm">
@@ -394,7 +394,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>BELT</b>
+              <b><h3>ACCESSORIES</h3><hr>BELT</b>
             </div>
           </div>
           <div class="col-sm">
@@ -478,7 +478,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>BROOCH</b>
+              <b><h3>ACCESSORIES</h3><hr>BROOCH</b>
             </div>
           </div>
           <div class="col-sm">
@@ -561,7 +561,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>CIRCLET</b>
+              <b><h3>ACCESSORIES</h3><hr>CIRCLET</b>
             </div>
           </div>
           <div class="col-sm">
@@ -625,7 +625,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>MASK</b>
+              <b><h3>ACCESSORIES</h3><hr>MASK</b>
             </div>
           </div>
           <div class="col-sm">
@@ -687,7 +687,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <b><h3>ACCESSOIRE</h3><hr>UNDERWEAR</b>
+              <b><h3>ACCESSORIES</h3><hr>UNDERWEAR</b>
             </div>
           </div>
           <div class="col-sm">
