--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="col-auto text-center">
               <a href="/gear.html" class="global-font-color">Gear</a><br>
-              <a href="/accessoire.html" class="global-font-color">Accessoire</a><br>
+              <a href="/accessories.html" class="global-font-color">Accessories</a><br>
               <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
             </div>
 
@@ -134,7 +134,7 @@
             <div class="main-text text-center">
               <p>
                 On this site you will find my PvE rolls for 
-                <a href="/gear.html">gear</a>, <a href="/accessoire.html">accessoires</a>, <a href="/miscellaneous.html">glyphs</a> or even <a href="/miscellaneous.html">talent points</a>. 
+                <a href="/gear.html">gear</a>, <a href="/accessories.html">accessories</a>, <a href="/miscellaneous.html">glyphs</a> or even <a href="/miscellaneous.html">talent points</a>. 
                 Maybe I can help some people with it :3
               </p>
             </div>
