--- a/temp.html
+++ b/temp.html
@@ -38,7 +38,7 @@
 
             <div class="col-auto text-center">
               <a href="/gear.html" class="global-font-color">Gear</a><br>
-              <a href="/accessoire.html" class="global-font-color">Accessoire</a><br>
+              <a href="/accessories.html" class="global-font-color">Accessories</a><br>
               <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
             </div>
 
