--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -241,7 +241,7 @@
               <dl>
                 <dt>Team oriented gameplay</dt>
                 <dd><i>If we are playing in a coordinated team, we can choose this glyph build. 
-                  You and your teammates standing in the AoE will iframe the all attacks within the next 3 seconds.</i></dd>
+                  You and your teammates standing in the AoE will automatically iframe attacks within the next 3 seconds.</i></dd>
                 <br>
                 <dt>Skip mechanics</dt>
                 <dd><i>With the Purple Smoke Bomb you can easily skip boss mechanics, like in Red Refuge when Argog bend down and stuns all who arent iframing. 
