--- a/index.html
+++ b/index.html
@@ -25,28 +25,38 @@
   </head>
   <body>
 
-    <!-- navbar content -->
-    <nav class="navbar">
-      <div class="container">
-        <div class="nav-text">
-
-          <div class="row">
-
-            <div class="col-auto">
-              <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo image-center"></a>
+      <!-- navbar content -->
+      <nav class="navbar">
+        <div class="container">
+          <div class="nav-text">
+  
+            <div class="row">
+  
+              <div class="col-auto">
+                <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo image-center"></a>
+              </div>
+  
+              <div class="col-auto text-center pull-down">
+                <a href="/gear.html" class="global-font-color">Gear</a>
+              </div>
+  
+              <div class="col-auto text-center pull-down">
+                <a href="/accessories.html" class="global-font-color">Accessories</a>
+              </div>
+  
+              <div class="col-auto text-center pull-down">
+                <a href="/skillrotation.html" class="global-font-color">Skill Rotation</a>
+              </div>
+  
+              <div class="col-auto text-center pull-down">
+                <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
+              </div>
+  
             </div>
-
-            <div class="col-auto text-center">
-              <a href="/gear.html" class="global-font-color">Gear</a><br>
-              <a href="/accessories.html" class="global-font-color">Accessories</a><br>
-              <a href="/miscellaneous.html" class="global-font-color">Miscellaneous</a>
-            </div>
-
+  
           </div>
-
         </div>
-      </div>
-    </nav>
+      </nav>
 
 
     <!-- head pictures -->
