--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -64,7 +64,7 @@
       <hr>
       
       <div class="row pull-down">  
-        <div class="col-sm center-max95 pull-up">
+        <div class="col-sm center-max95">
           <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="20000">
 
             <div class="carousel-inner">
@@ -89,7 +89,10 @@
         </div>
       </div>
 
-      <hr>
+      <!-- horizontal line -->
+      <div class="pull-down">
+          <hr>
+        </div>
     </div>
     
 
@@ -192,7 +195,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/talents.png" class="center-max80" alt="Talents">
+              <img src="/img/talyph/talents.png" class="center-max80 valk-design" alt="Talents">
             </div>
         </div>
       </div>
@@ -274,7 +277,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/glyphs.png" class="center-max80" alt="Purple Smoke Bomb Glyphs">
+              <img src="/img/talyph/glyphs.png" class="center-max80 valk-design" alt="Purple Smoke Bomb Glyphs">
             </div>
         </div>
       </div>
@@ -316,7 +319,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/glyphs_red.png" class="center-max80" alt="Red Smoke Bomb Glyphs">
+              <img src="/img/talyph/glyphs_red.png" class="center-max80 valk-design" alt="Red Smoke Bomb Glyphs">
             </div>
         </div>
       </div>
