--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <hr>
       
       <div class="row pull-down">  
-        <div class="col-sm center-max95 pull-up">
+        <div class="col-sm center-max95">
           <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="20000">
 
             <div class="carousel-inner">
@@ -89,7 +89,10 @@
         </div>
       </div>
 
-      <hr>
+      <!-- horizontal line -->
+      <div class="pull-down">
+        <hr>
+      </div>
     </div>
     
 
