--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
       <div class="row pull-down">  
         <div class="col-sm center-max95">
-          <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="20000">
+          <div id="slideshow-valky-head" class="carousel slide" data-ride="carousel" data-interval="20000">
 
             <div class="carousel-inner">
               <div class="carousel-item active">
