--- a/miscellaneous.html
+++ b/miscellaneous.html
@@ -195,7 +195,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/talents.png" class="center-max80 valk-design" alt="Talents">
+              <img src="/img/talyph/talents.png" class="center-max80" alt="Talents">
             </div>
         </div>
       </div>
@@ -277,7 +277,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/glyphs.png" class="center-max80 valk-design" alt="Purple Smoke Bomb Glyphs">
+              <img src="/img/talyph/glyphs.png" class="center-max80" alt="Purple Smoke Bomb Glyphs">
             </div>
         </div>
       </div>
@@ -319,7 +319,7 @@
       <div class="row ">
         <div class="col-sm">
             <div class="main-text text-center image-center">
-              <img src="/img/talyph/glyphs_red.png" class="center-max80 valk-design" alt="Red Smoke Bomb Glyphs">
+              <img src="/img/talyph/glyphs_red.png" class="center-max80" alt="Red Smoke Bomb Glyphs">
             </div>
         </div>
       </div>
