--- a/skillrotation.html
+++ b/skillrotation.html
@@ -379,11 +379,12 @@
 
       <!-- vid core rota -->
       <div class="row pull-down">
-        <div class="col-sm main-text text-center">
-          <video class="skill-player valk-design" poster="/vid/thumb/class.jpg" controls>
+        <div class="col-sm main-text text-center wrapper">
+          <video class="skill-player valk-design" poster="/img/thumb/class.jpg">
             <source src="/vid/class.mp4" type="video/mp4">
             Your browser does not support the player.
           </video>
+          <div class="playpause"></div>
           <p>© En Masse Entertainment</p>
         </div>
       </div>
@@ -920,11 +921,12 @@
 
       <!-- vid apex rota -->
       <div class="row pull-down">
-        <div class="col-sm main-text text-center">
-          <video class="skill-player valk-design" poster="/vid/thumb/apex.jpg" controls>
-              <source src="/vid/apex.mp4" type="video/mp4">
+        <div class="col-sm main-text text-center wrapper">
+          <video class="skill-player valk-design" poster="/img/thumb/apex.jpg">
+            <source src="/vid/apex.mp4" type="video/mp4">
             Your browser does not support the player.
           </video>
+          <div class="playpause"></div>
           <p>© En Masse Entertainment</p>
         </div>
       </div>
@@ -990,6 +992,7 @@
     <!-- pause slideshow on mouse hover -->
     <script src="/scripts/slideshow.js"></script>
     <script src="/scripts/spoiler.js"></script>
+    <script src="/scripts/player.js"></script>
   
   </body>
 </html>
