--- a/index.html
+++ b/index.html
@@ -165,15 +165,26 @@
       <!-- slideshow -->
       <div class="row pull-down">  
         <div class="col-sm center-max80">
-          <div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="10000">
+          <!--<div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="30000">
             
             <ol class="carousel-indicators">
               <li data-target="#slideshow-valky" data-slide-to="0" class="active"></li>
               <li data-target="#slideshow-valky" data-slide-to="1"></li>
+              <li data-target="#slideshow-valky" data-slide-to="3"></li>
             </ol>
 
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="carousel-item active">-->
+                <div class="wrapper">
+                  <video class="preview-player valk-design" poster="/img/thumb/preview.png">
+                    <source class="d-block w-100" src="/vid/preview.mp4" type="video/mp4">
+                    Your browser does not support the player.
+                  </video>
+                  <div class="playpause"></div>
+                  <p class="main-text">Apex Skill Preview</p>
+                </div>
+              <!--</div>
+              <div class="carousel-item">
                 <img class="d-block w-100" src="/img/main/fire_avalanche.png" alt="Fire Avalanche">
                 <p class="main-text pull-up-slide">Fire Avalanche</p>
               </div>
@@ -192,7 +203,7 @@
               <span class="sr-only">Next</span>
             </a>
 
-          </div>
+          </div>-->
         </div>
       </div>
       
@@ -254,6 +265,7 @@
     <!-- Custom JavaScript -->
     <!-- pause slideshow on mouse hover -->
     <script src="/scripts/slideshow.js"></script>
+    <script src="/scripts/player.js"></script>
   
   </body>
 </html>
