--- a/gear.html
+++ b/gear.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Basic Settings -->
-    <link rel="icon" href="/img/ninja_class.png">
+    <link rel="icon" href="/img/ninja_icon.png">
     <title>TERA Ninja Guide</title>
 
   </head>
@@ -33,7 +33,7 @@
             <div class="row">
   
               <div class="col-auto">
-                <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo image-center"></a>
+                <a class="navbar" href="/index.html"><img src="/img/ninja_icon.png" class="nav-logo image-center"></a>
               </div>
   
               <div class="col-auto text-center pull-down">
@@ -105,7 +105,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -115,7 +115,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -222,7 +222,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -232,7 +232,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -334,7 +334,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -344,7 +344,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -416,7 +416,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -426,7 +426,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
       </div>
