--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Basic Settings -->
-    <link rel="icon" href="/img/ninja_class.png">
+    <link rel="icon" href="/img/ninja_icon.png">
     <title>TERA Ninja Guide</title>
 
   </head>
@@ -33,7 +33,7 @@
             <div class="row">
   
               <div class="col-auto">
-                <a class="navbar" href="/index.html"><img src="/img/ninja_class.png" class="nav-logo image-center"></a>
+                <a class="navbar" href="/index.html"><img src="/img/ninja_icon.png" class="nav-logo image-center"></a>
               </div>
   
               <div class="col-auto text-center pull-down">
@@ -105,7 +105,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -115,7 +115,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_class.png" class="main-logo">
+              <img src="/img/ninja_icon.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -162,48 +162,17 @@
       </div>-->
 
 
-      <!-- slideshow -->
+      <!-- preview video -->
       <div class="row pull-down">  
         <div class="col-sm center-max80">
-          <!--<div id="slideshow-valky" class="carousel slide" data-ride="carousel" data-interval="30000">
-            
-            <ol class="carousel-indicators">
-              <li data-target="#slideshow-valky" data-slide-to="0" class="active"></li>
-              <li data-target="#slideshow-valky" data-slide-to="1"></li>
-              <li data-target="#slideshow-valky" data-slide-to="3"></li>
-            </ol>
-
-            <div class="carousel-inner">
-              <div class="carousel-item active">-->
-                <div class="wrapper">
-                  <video class="preview-player valk-design" poster="/img/thumb/preview.png">
-                    <source class="d-block w-100" src="/vid/preview.mp4" type="video/mp4">
-                    Your browser does not support the player.
-                  </video>
-                  <div class="playpause"></div>
-                  <p class="main-text">Apex Skill Preview</p>
-                </div>
-              <!--</div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/img/main/fire_avalanche.png" alt="Fire Avalanche">
-                <p class="main-text pull-up-slide">Fire Avalanche</p>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="/img/main/burning_heart.png" alt="Burning Heart">
-                <p class="main-text pull-up-slide">Burning Heart</p>
-              </div>
-            </div>
-
-            <a class="carousel-control-prev" href="#slideshow-valky" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#slideshow-valky" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-
-          </div>-->
+          <div class="valk-wrapper">
+            <video class="valk-player" poster="/img/thumb/preview.png">
+              <source src="/vid/preview.mp4" type="video/mp4">
+              Your browser does not support the player.
+            </video>
+            <div class="playpause"></div>
+            <p class="main-text">Apex Skill Preview © Valky / Speedy.Cat</p>
+          </div>
         </div>
       </div>
       
