--- a/accessories.html
+++ b/accessories.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="TERA Ninja Guide">
     <meta property="og:type" content="object">
     <meta property="og:site_name" content="TERA Ninja Guide">
-    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/47824376?s=400&amp;v=4">
+    <meta property="og:image" content="https://teraninja.github.io/img/ninja_icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Basic Settings -->
-    <link rel="icon" href="/img/ninja_icon.png">
+    <link rel="icon" href="/img/ninja_class.png">
     <title>TERA Ninja Guide</title>
 
   </head>
@@ -105,7 +105,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -115,7 +115,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -213,7 +213,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -223,7 +223,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -319,7 +319,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -329,7 +329,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -402,7 +402,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -412,7 +412,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -486,7 +486,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -496,7 +496,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -569,7 +569,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -579,7 +579,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -633,7 +633,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -643,7 +643,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -695,7 +695,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -705,7 +705,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
