--- a/gear.html
+++ b/gear.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="TERA Ninja Guide">
     <meta property="og:type" content="object">
     <meta property="og:site_name" content="TERA Ninja Guide">
-    <meta property="og:image" content="https://avatars0.githubusercontent.com/u/47824376?s=400&amp;v=4">
+    <meta property="og:image" content="https://teraninja.github.io/img/ninja_icon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="/css/main.css">
 
     <!-- Basic Settings -->
-    <link rel="icon" href="/img/ninja_icon.png">
+    <link rel="icon" href="/img/ninja_class.png">
     <title>TERA Ninja Guide</title>
 
   </head>
@@ -105,7 +105,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -115,7 +115,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -222,7 +222,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -232,7 +232,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -334,7 +334,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -344,7 +344,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
@@ -416,7 +416,7 @@
       <div class="row pull-down">
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
           <div class="col-sm">
@@ -426,7 +426,7 @@
           </div>
           <div class="col-sm">
             <div class="main-text text-center">
-              <img src="/img/ninja_icon.png" class="main-logo">
+              <img src="/img/ninja_class.png" class="main-logo">
             </div>
           </div>
       </div>
