--- a/skillrotation.html
+++ b/skillrotation.html
@@ -162,20 +162,6 @@
           </div>
         </div>
 
-        <!-- desc core rota 1st LotW -->
-        <div class="row">
-          <div class="col-sm main-text text-align-r">
-            <dl>
-              <dt>Leaves of the Wind</dt><dd><i>Animation cancel for Impact Bomb</i></dd>
-            </dl>
-          </div>
-          <div class="col-sm main-text">
-            <p>
-              <img src="/img/skill/leaves_wind.png" class="skill-logo">
-            </p>
-          </div>
-        </div>
-
         <!-- desc core rota 1st BS -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
@@ -190,11 +176,11 @@
           </div>
         </div>
 
-        <!-- desc core rota 2nd LotW -->
+        <!-- desc core rota 1st LotW -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
             <dl>
-              <dt>Leaves of the Wind</dt><dd><i>Cooldown reseted by Boomerang Shuriken</i></dd>
+              <dt>Leaves of the Wind</dt><dd><i>Cast the first time Leaves of the Wind</i></dd>
             </dl>
           </div>
           <div class="col-sm main-text">
@@ -218,7 +204,7 @@
           </div>
         </div>
 
-        <!-- desc core rota 3rd LotW -->
+        <!-- desc core rota 2nd LotW -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
             <dl>
@@ -246,30 +232,16 @@
           </div>
         </div>
 
-        <!-- desc core rota DJ -->
+        <!-- desc core rota JP -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
             <dl>
-              <dt>Decoy Jutsu</dt><dd><i>Teleport behind BAM and reset cooldown of Double Cut</i></dd>
+              <dt>Jagged Path</dt><dd><i>Get fast behind BAM again</i></dd>
             </dl>
           </div>
           <div class="col-sm main-text">
             <p>
-              <img src="/img/skill/decoy_jutsu.png" class="skill-logo">
-            </p>
-          </div>
-        </div>
-
-        <!-- desc core rota DC -->
-        <div class="row">
-          <div class="col-sm main-text text-align-r">
-            <dl>
-              <dt>Double Cut</dt><dd><i>If skill resets get talent power activated</i></dd>
-            </dl>
-          </div>
-          <div class="col-sm main-text">
-            <p>
-              <img src="/img/skill/double_cut.png" class="skill-logo">
+              <img src="/img/skill/jagged_path.png" class="skill-logo">
             </p>
           </div>
         </div>
@@ -316,20 +288,6 @@
           </div>
         </div>
 
-        <!-- desc core rota AT -->
-        <div class="row">
-          <div class="col-sm main-text text-align-r">
-            <dl>
-              <dt>Attunement</dt><dd><i>Use it now at around 500 Chi to fill it</i></dd>
-            </dl>
-          </div>
-          <div class="col-sm main-text">
-            <p>
-              <img src="/img/skill/attunement.png" class="skill-logo">
-            </p>
-          </div>
-        </div>
-
         <!-- desc core rota DC -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
@@ -340,6 +298,62 @@
           <div class="col-sm main-text">
             <p>
               <img src="/img/skill/double_cut.png" class="skill-logo">
+            </p>
+          </div>
+        </div>
+
+        <!-- desc core rota DJ -->
+        <div class="row">
+          <div class="col-sm main-text text-align-r">
+            <dl>
+              <dt>Decoy Jutsu</dt><dd><i>Teleport behind BAM and reset cooldown of Double Cut</i></dd>
+            </dl>
+          </div>
+          <div class="col-sm main-text">
+            <p>
+              <img src="/img/skill/decoy_jutsu.png" class="skill-logo">
+            </p>
+          </div>
+        </div>
+
+        <!-- desc core rota DC -->
+        <div class="row">
+          <div class="col-sm main-text text-align-r">
+            <dl>
+              <dt>Double Cut</dt><dd><i>Get talent power activated if cooldown resets</i></dd>
+            </dl>
+          </div>
+          <div class="col-sm main-text">
+            <p>
+              <img src="/img/skill/double_cut.png" class="skill-logo">
+            </p>
+          </div>
+        </div>
+
+        <!-- desc core rota SF -->
+        <div class="row">
+          <div class="col-sm main-text text-align-r">
+            <dl>
+              <dt>Skyfall</dt><dd><i>Use skyfall with your melee damage buff</i></dd>
+            </dl>
+          </div>
+          <div class="col-sm main-text">
+            <p>
+              <img src="/img/skill/skyfall.png" class="skill-logo">
+            </p>
+          </div>
+        </div>
+
+        <!-- desc core rota AT -->
+        <div class="row">
+          <div class="col-sm main-text text-align-r">
+            <dl>
+              <dt>Attunement</dt><dd><i>Use it now at around 500 Chi to fill it</i></dd>
+            </dl>
+          </div>
+          <div class="col-sm main-text">
+            <p>
+              <img src="/img/skill/attunement.png" class="skill-logo">
             </p>
           </div>
         </div>
@@ -602,20 +616,6 @@
           </div>
         </div>
 
-        <!-- desc apex rota 1st LotW -->
-        <div class="row">
-          <div class="col-sm main-text text-align-r">
-            <dl>
-              <dt>Leaves of the Wind</dt><dd><i>Animation cancel for Impact Bomb, Non-Apex</i></dd>
-            </dl>
-          </div>
-          <div class="col-sm main-text">
-            <p>
-              <img src="/img/skill/leaves_wind.png" class="skill-logo">
-            </p>
-          </div>
-        </div>
-
         <!-- desc apex rota 1st BS -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
@@ -630,7 +630,7 @@
           </div>
         </div>
 
-        <!-- desc apex rota 2nd LotW -->
+        <!-- desc apex rota 1st LotW -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
             <dl>
@@ -658,7 +658,7 @@
           </div>
         </div>
 
-        <!-- desc apex rota 3rd LotW -->
+        <!-- desc apex rota 2nd LotW -->
         <div class="row">
           <div class="col-sm main-text text-align-r">
             <dl>
